# Obsidina_mcp_chatgpt

./: .gitignore  AGENT_SETUP_GUIDE.md  PROMPT_FOR_OTHER_AI.md  README.md  pyproject.toml
scripts/: check_status.ps1  create_desktop_shortcut.ps1  install_obsidian_local_rest_api.ps1  launch_servers.ps1  start_bridge.ps1
src/obsidian_chatgpt_bridge/: __init__.py  server_sse.py
