[project]
name = "obsidian-mcp-chatgpt-bridge"
version = "0.1.0"
description = "SSE bridge and setup scripts for using Obsidian MCP from ChatGPT web"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp-obsidian>=0.2.2",
    "sse-starlette>=2.1.3",
    "starlette>=0.41.3",
    "uvicorn>=0.32.1",
]

[project.scripts]
obsidian-chatgpt-bridge = "obsidian_chatgpt_bridge.server_sse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_chatgpt_bridge"]
